apps/external_secrets/stores/bitwarden/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bitwarden-cli
  namespace: bitwarden
  labels:
    app.kubernetes.io/instance: bitwarden-cli
    app.kubernetes.io/name: bitwarden-cli
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: bitwarden-cli
      app.kubernetes.io/instance: bitwarden-cli
  template:
    metadata:
      labels:
        app.kubernetes.io/name: bitwarden-cli
        app.kubernetes.io/instance: bitwarden-cli
    spec:
      containers:
        - name: bitwarden-cli
          image: oreillepale/bitwarden-cli-arm:newest-build
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8087
              protocol: TCP
          # livenessProbe:
          #   exec:
          #     command:
          #       - wget
          #       - -q
          #       - http://127.0.0.1:8087/sync?force=true
          #       - --post-data=''
          #   initialDelaySeconds: 20
          #   failureThreshold: 3
          #   timeoutSeconds: 10
          #   periodSeconds: 120
          # readinessProbe:
          #   tcpSocket:
          #     port: 8087
          #   initialDelaySeconds: 20
          #   failureThreshold: 3
          #   timeoutSeconds: 1
          #   periodSeconds: 10
          # startupProbe:
          #   tcpSocket:
          #     port: 8087
          #   initialDelaySeconds: 10
          #   failureThreshold: 30
          #   timeoutSeconds: 1
          #   periodSeconds: 5
